--- a/.github/workflows/function.yml
+++ b/.github/workflows/function.yml
@@ -41,5 +41,5 @@ jobs:
       uses: Azure/functions-action@v1
       id: fa
       with:
-        app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
+        app-name: ${{ env.FUNCTION_NAME }}
         package: '${{ env.AZURE_FUNCTION_PACKAGE_PATH }}/output'                          
