--- a/.github/workflows/function.yml
+++ b/.github/workflows/function.yml
@@ -31,15 +31,16 @@ jobs:
         dotnet build --configuration Release --output ./output
         popd
 
-    - name: Azure Login
-      uses: Azure/login@v1.1
-      with:          
-        creds: ${{ secrets.AZURE_CREDENTIALS }}          
-        enable-AzPSSession: false  
+    # - name: Azure Login
+    #   uses: Azure/login@v1.1
+    #   with:          
+    #     creds: ${{ secrets.AZURE_CREDENTIALS }}          
+    #     enable-AzPSSession: false  
 
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       id: fa
       with:
         app-name: ${{ env.FUNCTION_NAME }}
-        package: '${{ env.AZURE_FUNCTION_PACKAGE_PATH }}/output'                          
+        package: '${{ env.AZURE_FUNCTION_PACKAGE_PATH }}/output'
+        publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}                           
