change function name

--- a/.github/workflows/function.yml
+++ b/.github/workflows/function.yml
@@ -6,7 +6,7 @@ on:
 env:
   DOTNET_VERSION: '3.1.x'
   AZURE_FUNCTION_PACKAGE_PATH: 'src'
-  FUNCTION_NAME: func3hgtest
+  FUNCTION_NAME: funchgtest
 
 jobs:
   build-and-deploy:
