--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,7 +1,10 @@
 name: Create Azure Resources
 
 on:
-  workflow_dispatch:    
+  workflow_dispatch:
+  push:
+    paths:
+      - 'bicep/**/*.bicep'
 
 jobs:
   create-azure-resources:
